# entropyfa-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install.sh
cli/: Cargo.toml
cli/src/: chart.rs  input.rs  main.rs  output.rs  version.rs  webhook.rs
cli/src/assembler/: mod.rs  pension.rs  retirement.rs  simulation.rs  tax.rs
cli/src/commands/: data.rs  env.rs  mod.rs  pension.rs  retirement.rs  simulation.rs  tax.rs
cli/src/schema/: mod.rs  pension.rs  retirement.rs  simulation.rs  tax.rs
cli/src/support/: mod.rs  reference_packs.rs  reference_paths.rs
cli/tests/: integration.rs
docs/: README.md  (+5 more)
engine/: Cargo.toml
engine/data_registry/2025/: metadata.json  snapshot.json
engine/data_registry/2026/: metadata.json  snapshot.json
engine/data_registry/pipelines/gifting/: federal_annual_exclusion.json
engine/data_registry/pipelines/insurance/: irmaa_brackets.json  medicare_base_premiums.json
engine/data_registry/pipelines/pension/: mortality_417e.json
engine/data_registry/pipelines/rates/: afr_2026_01.json  afr_2026_02.json  afr_2026_03.json  section_7520_2026_01.json  section_7520_2026_02.json  section_7520_2026_03.json
engine/data_registry/pipelines/retirement/: contribution_limits.json  distribution_rules.json  joint_life_table.json  single_life_table.json  uniform_lifetime_table.json
engine/data_registry/pipelines/social_security/: benefit_taxation_thresholds.json  full_retirement_age_rules.json  retirement_earnings_test_thresholds.json
engine/data_registry/pipelines/tax/: federal_capital_gains_brackets.json  federal_capital_loss_limit.json  federal_estate_applicable_credit.json  federal_estate_brackets.json  federal_estate_exemption.json  federal_income_tax_brackets.json  federal_net_investment_income_tax.json  federal_payroll_tax_parameters.json  federal_qbi_deduction.json  federal_salt_deduction_parameters.json  federal_standard_deductions.json  hsa_contribution_limits.json
engine/src/: data_pipeline.rs  lib.rs
engine/src/compute/annuity/: mod.rs
engine/src/data/: mod.rs  taxonomy.rs  types.rs
engine/src/data_pipeline/: workflow.rs
engine/src/models/: error.rs  estate_tax_request.rs  estate_tax_response.rs  mod.rs  pension_request.rs  pension_response.rs  retirement_rmd.rs  roth_conversion.rs  simulation_request.rs  simulation_response.rs  solver_request.rs  solver_response.rs  tax_request.rs  tax_response.rs
engine/src/validation/: mod.rs
engine/tests/: data_pipeline.rs  data_pipeline_workflow.rs  golden.rs
(+170 files in other folders)
