[package]
name = "entropyfa"
version = "0.1.0"
edition = "2021"
description = "Personal finance CLI for AI agents — verified IRS data + tax, retirement, and estate planning calculations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Entropy-Financial-Technologies/entropyfa-cli"

[[bin]]
name = "entropyfa"
path = "src/main.rs"

[dependencies]
entropyfa-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
