[package]
name = "entropyfa-engine"
version = "0.1.6"
edition = "2021"
description = "Personal finance engine for AI agents — IRS reference data + deterministic financial calculations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Entropy-Financial-Technologies/entropyfa-cli"
keywords = ["finance", "tax", "retirement", "financial-planning", "ai-agent"]
categories = ["finance", "command-line-utilities"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
crossterm = "0.28"
ratatui = "0.29"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
